[tool.poetry]
name = "travel-planner"
version = "0.1.0"
description = "A travel planning application"
authors = ["Lennart Fiebig <fiebiglennart@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langgraph = "^1.0.5"
langchain = "^1.2.0"
langfuse = "^3.11.2"
langchain-openai = "^1.1.6"
python-dotenv = "^1.0.0"
tavily-python = "^0.7.17"
langchain-tavily = "^0.2.16"
streamlit = "^1.41.0"
langchain-anthropic = "^1.3.1"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
travel-planner = "travel_planner.main:main"
travel-planner-ui = "streamlit.cli:main_run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

